--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink: "/:title/"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 author: Sal
-paginate: 30
+paginate: 9
 disqus: 'demowebsite'
 locale: en_us
 lang: en_us
@@ -24,28 +24,20 @@ ganalytics: UA-113961478-1
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
+  isaac:
+    name: Isaac
+    display_name: Isaac
     avatar: 'assets/images/sal.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
+    email: isaacdelosredi@gmail.com
+    web: https://iesedobleac.github.io/
+    twitter: https://twitter.com/iesedobleac
     description: "Author of Affiliates, a template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John
-    avatar: 'assets/images/john.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Affiliates theme demo, a Jekyll template compatible with Github pages."
 
 # Social
 social:
-  instagram: https://www.instagram.com/bootstrapstarter/
-  facebook: https://www.facebook.com/bootstrapstartercom-346329609045284
-  twitter: https://twitter.com/bstartercom
+  twitter: https://twitter.com/iesedobleac
+  linkedin: https://www.linkedin.com/in/isaacdelosreyesdiaz/
+  email: isaacdelosredi@gmail.com
 
 # Plugins
 plugins: 
