--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 author: Sal
 paginate: 9
+tag_dir: [Android, Kotlin, Tecnología, Charlando]
 disqus: 'demowebsite'
 locale: en_us
 lang: en_us
