Se ha cambiado la ilustración de la portada y se le ha añadido un color degradado

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ authors:
   isaac:
     name: Isaac
     display_name: Isaac
-    avatar: 'assets/images/sal.png'
+    avatar: 'assets/images/isaac.jpg'
     email: isaacdelosredi@gmail.com
     web: https://iesedobleac.github.io/
     twitter: https://twitter.com/iesedobleac
