Se eliminan los rastros de http para cambiarlo por https

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ authors:
     display_name: Isaac
     avatar: 'assets/images/isaac.webp'
     email: isaacdelosredi@gmail.com
-    web: https://iesedobleac.github.io/
+    web: https://queridoprogramador.com/
     twitter: https://twitter.com/iesedobleac
     description: "Autor de Querido Programador. Desarrollador sevillano centrado en programación móvil con ganas de aprender y sobretodo enseñar al resto lo que está aprediendo."
 
