Se mejora el SEO de la web añadiendo una portada al index

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: "Querido Programador"
+tagline: "Blog que nace con la idea de compartir lo que voy aprendiendo día a día sobre programación."
 email: isaacdelosredi@gmail.com
 timezone: UTC
 baseurl: ""
