Mejoras en el SEO

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: "Querido Programador"
-tagline: "Blog que nace con la idea de compartir lo que voy aprendiendo día a día sobre programación."
+description: "Blog que nace con la idea de compartir lo que voy aprendiendo día a día sobre programación."
+tagline: "Blog sobre programación"
 email: isaacdelosredi@gmail.com
 timezone: UTC
 baseurl: ""
