Se ha añadido un post nuevo sobre funciones inline y se ha añadido el remarcado de código para los post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
     "cSpell.words": [
         "desinstálalo",
         "Glance",
+        "microsegundos",
         "minimalista",
-        "minimapa"
+        "minimapa",
+        "suspendible",
+        "suspendibles"
     ]
 }
