Se añade la segunda parte de los principios SOLID

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "corrutina",
         "desinstálalo",
         "Glance",
+        "herendado",
         "microsegundos",
         "minimalista",
         "minimapa",
